<resources>
    <string name="app_name" translatable="false">Dark theme</string>
    <string name="app_package" translatable="false">com.phstudio.darktheme</string>
    <string name="developer_name" translatable="false">PH studio</string>
    <string name="app_version" translatable="false">2.6</string>

    <string name="about" translatable="false">https://phstudio2.github.io/</string>
    <string name="github" translatable="false">https://github.com/phstudio2</string>
    <string name="telegram" translatable="false">https://t.me/s/phstudio2</string>
    <string name="report" translatable="false">https://github.com/phstudio2/Darktheme/issues/new/choose</string>
    <string name="google_play" translatable="false">https://play.google.com/store/apps/dev?id=5702159986992384861</string>
    <string name="privacy" translatable="false">https://github.com/phstudio2/Darktheme/blob/master/LICENSE</string>
    <string name="terms" translatable="false">https://github.com/phstudio2/Darktheme/blob/master/LICENSE</string>
    <string name="email_text2" translatable="false">https://play.google.com/store/apps/details?id=com.phstudio.darktheme</string>
    <string name="email_text3" translatable="false">https://galaxy.store/dark5</string>

    <string name="time_null" translatable="false">--:--</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Exit_app">Exit app</string>
    <string name="close_app">Do you want to close this application?</string>
    <string name="share_mail">Download this great app ;)!</string>
    <string name="select_email">Share with…</string>
    <string name="email_text">Hi download Dark theme from PH studio!</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="change_to_dark_mode">Change to dark mode</string>
    <string name="change_to_light_mode">Change to light mode</string>
    <string name="light_mode_active">Light mode active!</string>
    <string name="dark_mode_active">Dark mode active!</string>
    <string name="system_in_settings">Change the theme directly on your device.</string>
    <string name="ChangerTheme">Changer Theme</string>
    <string name="DarkModeShortcut">Shortcut</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="schedule">Scheduler</string>
    <string name="filter">Filters</string>
    <string name="select">select</string>
    <string name="stop_theme">Paused!</string>
    <string name="start_theme">Set!</string>
    <string name="set_dark_mode">DARK MODE SET</string>
    <string name="set_light_mode">LIGHT MODE SET</string>
    <string name="on_time">On time</string>
    <string name="off_time">Off time</string>
    <string name="amoled">AMOLED Black</string>
    <string name="flower">White flower</string>
    <string name="moon">Moon with plane</string>
    <string name="want_pic">Do you want this picture to wallpaper?</string>
    <string name="cat">Cat</string>
    <string name="horse">Horse</string>
    <string name="dog">Dog</string>
    <string name="girl">Girl</string>
    <string name="fire">Fire</string>
    <string name="bulb">Bulb</string>
    <string name="on_filter">On</string>
    <string name="off_filter">Off</string>
    <string name="CHANNEL_ID">Display Filter</string>
    <string name="CHANNEL_NAME">Filters</string>
    <string name="ContentText">Tap to off</string>
    <string name="text_filters">Display Filters</string>
    <string name="not_support">Your system does not support.</string>

    <!-- Dialog layout -->
    <string name="application_development">Application development</string>
    <string name="text_about">About</string>
    <string name="text_contact">Contact</string>
    <string name="text_bug">Report bug</string>
    <string name="text_share">Share</string>
    <string name="text_apps">More apps</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="text_settings">Settings</string>
    <string name="license">License</string>
    <string name="reset">Reset</string>
</resources>