<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/it_changer"
        android:icon="@drawable/ic_changer"
        android:title="@string/ChangerTheme" />
    <item
        android:id="@+id/it_filters"
        android:icon="@drawable/ic_filters"
        android:title="@string/filter" />
    <item
        android:id="@+id/it_wallpapers"
        android:icon="@drawable/ic_wallpapers"
        android:title="@string/wallpapers" />
    <item
        android:id="@+id/it_scheduler"
        android:icon="@drawable/ic_scheduler"
        android:title="@string/schedule" />

    <item
        android:id="@+id/it_settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings" />

</menu>