<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@color/design4"
    tools:context=".Fragments.WallpaperFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_textbckg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/simpleGallery"
        android:layout_alignBottom="@+id/simpleGallery"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-16dp"
        android:background="@drawable/layout_texttime" />

    <HorizontalScrollView
        android:id="@+id/simpleGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonblack"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/amoled"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/black" />

            <ImageButton
                android:id="@+id/buttonflower"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/flower"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/flower" />

            <ImageButton
                android:id="@+id/buttonmoon"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/moon"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/moon" />

            <ImageButton
                android:id="@+id/buttoncat"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/cat"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/cat" />

            <ImageButton
                android:id="@+id/buttonhorse"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/horse"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/horse" />

            <ImageButton
                android:id="@+id/buttondog"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/dog"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/dog" />

            <ImageButton
                android:id="@+id/buttonfire"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/fire"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/fire" />

            <ImageButton
                android:id="@+id/buttongirl"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/girl"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/girl" />

            <ImageButton
                android:id="@+id/buttonbulb"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/bulb"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/bulb" />
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>