<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/design4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layout_textbckg"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9557292" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/layout_texttime"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="108dp"
            android:contentDescription="@string/about"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/size_profile" />

        <TextView
            android:id="@+id/tv_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/developer_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_application_development"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/application_development"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/tv_developer_name"
            app:layout_constraintStart_toStartOf="@+id/tv_developer_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_developer_name" />

        <ImageButton
            android:id="@+id/ib_website"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/about"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/size_website"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="Website"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_website"
            app:layout_constraintEnd_toEndOf="@+id/ib_website"
            app:layout_constraintStart_toStartOf="@+id/ib_website"
            app:layout_constraintTop_toBottomOf="@+id/ib_website" />

        <ImageButton
            android:id="@+id/imb_github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/github"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/size_github"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="GitHub"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imb_github"
            app:layout_constraintEnd_toEndOf="@+id/imb_github"
            app:layout_constraintStart_toStartOf="@+id/imb_github"
            app:layout_constraintTop_toBottomOf="@+id/imb_github"
            app:layout_constraintVertical_bias="0.52" />

        <TextView
            android:id="@+id/tv_apps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_apps"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/size_apps"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_report_bug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_bug"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/size_bug"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_apps" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_share"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/size_share"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_bug" />

        <TextView
            android:id="@+id/tv_telegram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="Telegram"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/size_telegram"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_share" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_privacy"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/size_privacy"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_telegram" />

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_terms"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/size_terms"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_privacy" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_contact"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:drawableLeftCompat="@drawable/size_contact"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_terms" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_texttime"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/text_settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:drawableLeftCompat="@drawable/size_settings"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>